--- a/README.Rmd
+++ b/README.Rmd
@@ -3,7 +3,7 @@ title: "simCAT"
 output: github_document
 ---
 
-simCAT implements Computerized Adaptive Testing simulations with dichotomic 
+simCAT implements Computerized Adaptive Testing simulations with dichotomous 
 items. The program selects items with Maximum Fisher Information method or randomly, 
 with or without constraints (content balancing and item exposure control).
 
