sim.shiny in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -13,4 +13,9 @@ To install simCAT, use:
 devtools::install_github('alexandrejaloto/simCAT')
 ```
 
+To simulate using a friendly interface, use:
+```{r eval=FALSE}
+simCAT::sim.shiny()
+```
+
 We will be happy to read your suggestions: alexandrejaloto@gmail.com.
